Added GET guild verification
